<?xml version="1.0" encoding="utf-8"?>
<io.github.dreierf.materialintroscreen.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_customize_control_title"
        android:textSize="25sp"
        android:textColor="#424242"
        android:gravity="center"
        app:layout_parallaxFactor="0.7"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingHorizontal="40dp"
        android:baselineAligned="false"
        app:layout_parallaxFactor="0.5">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_locally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            app:cardBackgroundColor="@color/slide_custom_control_background"
            app:cardUseCompatPadding="true"
            app:cardElevation="0dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_local"
                    android:contentDescription="@string/desc_key__image_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_customize_control_locally"
                    android:textColor="#424242"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/layout_remotely"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            app:cardBackgroundColor="@color/slide_custom_control_background"
            app:cardUseCompatPadding="true"
            app:cardElevation="0dp"
            app:cardCornerRadius="5dp"
            android:alpha="0.5">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_remote"
                    android:contentDescription="@string/desc_key__image_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_customize_control_remotely"
                    android:textColor="#424242"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</io.github.dreierf.materialintroscreen.parallax.ParallaxLinearLayout>